--- a/public/styles/Main.scss
+++ b/public/styles/Main.scss
@@ -11,6 +11,8 @@
 // Components
 @import "../../components/navbar/navbar.scss";
 @import "../../components/banner/banner.scss";
+@import "../../components/event-slider/event-slider.scss";
+@import "../../components/event-thumbnail/event-thumbnail.scss";
 @import "../../components/footer/footer.scss";
 
 // Shared styles  *keep at the bottom (overides)
