footer and sliders implemented

--- a/public/styles/Main.scss
+++ b/public/styles/Main.scss
@@ -13,6 +13,9 @@
 @import "../../components/banner/banner.scss";
 @import "../../components/event-slider/event-slider.scss";
 @import "../../components/event-thumbnail/event-thumbnail.scss";
+@import "../../components/blog-thumbnail/blog-thumbnail.scss";
+@import "../../components/blog-slider/blog-slider.scss";
+@import "../../components/become-member-widget/become-member-widget.scss";
 @import "../../components/footer/footer.scss";
 
 // Shared styles  *keep at the bottom (overides)
