--- a/public/styles/base/_global.scss
+++ b/public/styles/base/_global.scss
@@ -35,6 +35,7 @@ button {
 h1 {
   font-family: $font-family-title;
   font-size: $font-size-mega;
+  color: $color-red;
   line-height: calculateRem(25px);
   @include desktopSmall {
     font-size: calculateRem(30px);
