--- a/components/event-thumbnail/event-thumbnail.scss
+++ b/components/event-thumbnail/event-thumbnail.scss
@@ -5,9 +5,7 @@
   }
 
   .date {
-    padding: 5px 0 0 30px;
-    background: url("/static/images/icons/calender.svg") no-repeat center left;
-    background-size: 23px;
+    @include calender();
     @include desktopSmall {
       margin: 10px 0;
     }
