author list, blogs page and blog page implemented

--- a/public/styles/Main.scss
+++ b/public/styles/Main.scss
@@ -21,6 +21,7 @@
 @import "../../components/authors-list/authors-list.scss";
 @import "../../components/about-us/about-us.scss";
 @import "../../components/user-profile/user-profile.scss";
+@import "../../components/blog/blog.scss";
 @import "../../components/footer/footer.scss";
 
 // Shared styles  *keep at the bottom (overides)
