event page, db schema, events page, admin creata event feature implemented

--- a/components/blog-thumbnail/blog-thumbnail.scss
+++ b/components/blog-thumbnail/blog-thumbnail.scss
@@ -1,5 +1,7 @@
 .blog-thumbnail {
   margin-bottom: 40px;
+  @include hoverGray();
+
   @include desktopSmall {
     width: 48%;
     margin-bottom: 50px;
