--- a/components/event-thumbnail/event-thumbnail.scss
+++ b/components/event-thumbnail/event-thumbnail.scss
@@ -1,15 +1,6 @@
 .event-thumbnail {
-  margin-bottom: 50px;
-  img {
-    width: 100%;
-  }
-
-  .date {
-    @include calender();
-    @include desktopSmall {
-      margin: 10px 0;
-    }
-  }
+  margin-bottom: 60px;
+  @include hoverGray();
 
   h2 {
     margin-top: 7px;
@@ -19,10 +10,43 @@
     }
   }
 
-  .location {
-    text-align: right;
-    padding: 5px 30px 0 5px;
-    background: url("/static/images/icons/location.svg") no-repeat center right;
-    background-size: 23px;
+  .intro {
+    margin-bottom: 10px;
+  }
+
+  img {
+    width: 100%;
+  }
+
+  &-flex {
+    display: flex;
+    justify-content: space-between;
+    div {
+      width: 50%;
+    }
+    .date {
+      @include calender();
+      @include desktopSmall {
+        margin: 10px 0;
+      }
+    }
+    .time {
+      @include clock();
+    }
+    .joined {
+      @include people();
+      position: relative;
+      &:after {
+        content: "Katılım";
+        position: absolute;
+        bottom: -7px;
+        right: 0;
+        font-weight: 100;
+        font-size: $font-size-medium;
+      }
+    }
+    .location {
+      @include location();
+    }
   }
 }
