--- a/public/styles/Main.scss
+++ b/public/styles/Main.scss
@@ -22,6 +22,7 @@
 @import "../../components/about-us/about-us.scss";
 @import "../../components/user-profile/user-profile.scss";
 @import "../../components/blog/blog.scss";
+@import "../../components/event/event.scss";
 @import "../../components/footer/footer.scss";
 
 // Shared styles  *keep at the bottom (overides)
