--- a/components/event-slider/event-slider.scss
+++ b/components/event-slider/event-slider.scss
@@ -2,8 +2,8 @@
   &__frame {
     @include desktopSmall {
       display: flex;
+      flex-wrap: wrap;
       justify-content: space-between;
-
       .event-thumbnail {
         width: 31%;
       }
