--- a/public/styles/Main.scss
+++ b/public/styles/Main.scss
@@ -23,6 +23,10 @@
 @import "../../components/user-profile/user-profile.scss";
 @import "../../components/blog/blog.scss";
 @import "../../components/event/event.scss";
+@import "../../components/social-media-share/social-media-share.scss";
+@import "../../components/suggest-blog/suggest-blog.scss";
+@import "../../components/suggest-event/suggest-event.scss";
+@import "../../components/user-profile-info/user-profile-info.scss";
 @import "../../components/footer/footer.scss";
 
 // Shared styles  *keep at the bottom (overides)
