--- a/public/styles/base/_variables.scss
+++ b/public/styles/base/_variables.scss
@@ -1,5 +1,6 @@
 // Colors
 $color-dark-gray: #434c58;
+$color-light-gray: #ededed;
 $color-red: #c32c2c;
 // Typography
 $font-family-body: "Arial", sans-serif;
