--- a/public/styles/shared/_index.scss
+++ b/public/styles/shared/_index.scss
@@ -56,6 +56,10 @@
     border: 1px solid $color-red;
   }
 
+  textarea {
+    border: 1px solid $color-red;
+  }
+
   button {
     border: none;
     background-color: $color-red;
