--- a/views/add-event.ejs
+++ b/views/add-event.ejs
@@ -256,8 +256,12 @@
       </div>
       <div class="seoWrap">
         <input class="seo" type="text" name="duration" placeholder=" Duration --> 15:30 - 18:00 " required="required" maxlength="250"/>
-        <input class="seo" type="text" name="price" placeholder=" Price --> 70.00 TL " required="required" maxlength="150"/>
+        <input class="seo" type="number" name="price" placeholder=" Price --> 70" required="required" maxlength="150"/>
         <input class="seo" type="number" name="capacity" placeholder=" Max Capacity --> 450 " required="required" maxlength="150"/>
+      </div>
+      <div class="seoWrap">
+        <input class="seo" type="date" name="date" required="required"/>
+        <input class="seo" type="number" name="joined" placeholder=" Katilan Sayisi --> 8 or 0" required="required" maxlength="150"/>
       </div>
 
       <!-- TAG GENERATORS -->
