--- a/components/user-profile-info/user-profile-info.scss
+++ b/components/user-profile-info/user-profile-info.scss
@@ -23,6 +23,80 @@
 
   &-noactivity {
     margin: 25px 0;
-    text-align: center;
+    @include redTick();
+    padding-top: 11px;
+  }
+
+  // suggested blog section
+  &__posted {
+    background: white;
+    padding: 10px 4px;
+    h3 {
+      color: $color-red;
+    }
+    &-item {
+      h5 {
+        margin-bottom: 3px;
+        cursor: pointer;
+        &:hover {
+          color: $color-red;
+        }
+      }
+
+      pre {
+        display: none;
+      }
+
+      &-status {
+        font-size: $font-size-medium;
+        padding-left: 30px;
+        background: url("/static/images/icons/red-arrow.svg") no-repeat 10px
+          center;
+        margin-bottom: 24px;
+      }
+    }
+  }
+
+  // sugested blog pop up section
+  &-popup {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: rgba(242, 242, 242, 0.9);
+    z-index: 14;
+    &-frame {
+      width: 90%;
+      margin: 20px auto;
+      max-width: 1000px;
+      position: relative;
+      height: 96%;
+      overflow: hidden;
+      padding: 60px 2% 10px;
+      border: 2px solid $color-red;
+      background: $color-light-gray;
+      img {
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 54px;
+        cursor: pointer;
+      }
+      h5 {
+        font-size: $font-size-large;
+        @include redTick();
+        background-position: left 7px;
+        margin-top: 0;
+      }
+      h3 {
+      }
+      pre {
+        overflow-y: scroll;
+        overflow-x: hidden;
+        height: 75%;
+        padding: 20px 13px 80px 0;
+      }
+    }
   }
 }
