Color sass variables added

--- a/public/styles/base/_variables.scss
+++ b/public/styles/base/_variables.scss
@@ -1,6 +1,15 @@
+// Hi Robin
+
+/***
+*
+* Here variables
+*  just like javascript, these are sass variables
+* you can use them in your sass files
+*/
+
 // Colors
-
-
+$color-dark-navy: #313c53;
+$color-light-gray: rgb(245, 247, 248);
 
 // Typography
 $font-family-body: "Arial", sans-serif;
