--- a/public/styles/base/_variables.scss
+++ b/public/styles/base/_variables.scss
@@ -1,8 +1,9 @@
 // Colors
-$color-dark-navy: #002937;
+$color-navy: #002937;
 $color-light-gray: #f5f7f8;
-$color-green: #00cea5;
 $color-red: #ff4436;
+$color-green: #006b3f;
+$color-yellow: #fcd116;
 
 // Typography
 $font-family-body: "Arial", sans-serif;
