--- a/public/styles/base/_global.scss
+++ b/public/styles/base/_global.scss
@@ -7,6 +7,8 @@ body {
   width: 100%;
   overflow-x: hidden;
   font-family: $font-family-body;
+  position: relative;
+  @include limitWidthDektop();
 }
 
 a {
