--- a/public/styles/base/_mixins.scss
+++ b/public/styles/base/_mixins.scss
@@ -8,6 +8,36 @@
   line-height: calculateRem($size);
 }
 
+// background icon
+@mixin backgroundIcon($imgPath, $size, $position) {
+  $path: "/static/images/icons/" + $imgPath;
+  background-image: url(#{$path});
+  background-repeat: no-repeat;
+  background-size: $size;
+  background-position: $position;
+}
+
+@mixin limitWidthDektop() {
+  @include desktopSmall {
+    max-width: 1400px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@mixin limitWidthMobile() {
+  @media (max-width: 767px) {
+    width: 96%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+// Rem Coverter
+@function calculateRem($size) {
+  $remSize: $size / 16px;
+  @return #{$remSize}rem;
+}
 
 // Break points
 @mixin tablet {
