--- a/public/styles/Main.scss
+++ b/public/styles/Main.scss
@@ -12,6 +12,8 @@
 @import "../../components/nav/nav.scss";
 @import "../../components/burger/burger.scss";
 @import "../../components/nav-menu/nav-menu.scss";
+@import "../../components/banner/banner.scss";
+@import "../../components/search-auto/search-auto.scss";
 
 // Shared styles  *keep at the bottom (overides)
 @import "shared/_js-classes.scss";
