--- a/public/styles/base/_variables.scss
+++ b/public/styles/base/_variables.scss
@@ -1,5 +1,5 @@
 // Colors
-$color-navy: #002937;
+$color-navy: #313c53;
 $color-light-gray: #f5f7f8;
 $color-red: #ff4436;
 $color-green: #006b3f;
@@ -7,7 +7,7 @@ $color-yellow: #fcd116;
 
 // Typography
 $font-family-body: "Arial", sans-serif;
-$font-family-title: "Mukta", sans-serif;
+$font-family-title: "Roboto Condensed", sans-serif;
 
 $font-size-tiny: calculateRem(10.3px);
 $font-size-small: calculateRem(12px);
