--- a/public/styles/Main.scss
+++ b/public/styles/Main.scss
@@ -14,6 +14,10 @@
 @import "../../components/nav-menu/nav-menu.scss";
 @import "../../components/banner/banner.scss";
 @import "../../components/search-auto/search-auto.scss";
+@import "../../components/nav-slim/nav-slim.scss";
+@import "../../components/car-makes/car-makes.scss";
+@import "../../components/car-types/car-types.scss";
+@import "../../components/sell-your-car/sell-your-car.scss";
 
 // Shared styles  *keep at the bottom (overides)
 @import "shared/_js-classes.scss";
