--- a/components/nav-menu/nav-menu.scss
+++ b/components/nav-menu/nav-menu.scss
@@ -10,11 +10,13 @@
     width: 50%;
     transition: 0.4s $transition;
     @include desktopSmall {
+      border: none !important;
+      top: 10px;
       position: absolute;
       transform: translateX(0) !important;
       background: transparent !important;
+      height: auto;
       &-list {
-        margin-top: 25px !important;
         margin-left: 0 !important;
         &-item {
           color: white !important;
@@ -26,7 +28,6 @@
       margin-left: 3vw;
       &-item {
         display: block;
-        font-size: $font-size-xlarge;
         margin: 15px 0 15px 0;
         padding: 7px 0 7px 30px;
         font-family: $font-family-title;
@@ -38,33 +39,42 @@
     background: $color-navy;
     right: 0;
     transform: translateX(200%);
+    border-top: 1px solid $color-light-gray;
     @include desktopSmall {
-      top: 0;
       right: 10%;
       width: auto !important;
       &-list {
-        .contact-us,
+        margin-top: 13px !important;
         .yellow,
-        .red {
-          font-weight: 900;
-          font-size: $font-size-large;
-        }
-        .contact-us {
-          color: #09a935 !important;
+        .green {
+          border-bottom: 1px solid;
+          padding-left: 0;
+          margin-left: 20px;
+          padding-bottom: 4px;
+          padding-left: 0;
         }
         .yellow {
           color: $color-yellow !important;
         }
-        .red {
-          color: $color-red !important;
+        .green {
+          color: #09a935 !important;
         }
         &-item {
           display: inline !important;
           background: none !important;
         }
+        .advert {
+          margin-left: 17px;
+        }
       }
     }
     &-list {
+      .advert {
+        width: 120px;
+        text-align: center;
+        display: inline-block !important;
+        font-size: $font-size-small;
+      }
       &-item {
         color: $color-light-gray;
         @include backgroundIcon("right-arrow-gray.svg", 15px, 6px 10px);
@@ -76,17 +86,19 @@
     background: $color-light-gray;
     left: 0;
     transform: translateX(-100%);
+    border-top: 1px solid $color-navy;
     @include desktopSmall {
       width: auto !important;
-      top: 0;
       left: 25%;
       width: 80% !important;
       &-list {
+        margin-top: 24px !important;
         .search {
           display: none !important;
         }
         &-item {
-          padding-left: 22px;
+          font-size: $font-size-xxlarge;
+          padding-left: 20px;
           margin-left: 4%;
           display: inline !important;
           background: url("/static/images/icons/right-arrow-gray.svg") no-repeat
