--- a/public/styles/shared/_index.scss
+++ b/public/styles/shared/_index.scss
@@ -6,3 +6,35 @@
   border-radius: 60px;
   background: #ff4436;
 }
+
+.default-form {
+  * {
+    display: block;
+  }
+  input {
+    text-indent: 5px;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    border: solid 2px #e8e8e3;
+    &::placeholder {
+      font-size: $font-size-medium;
+      color: #afafaf;
+    }
+  }
+  select {
+    text-indent: 5px;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    border: solid 2px $color-light-gray;
+    background: #e8e8e3;
+  }
+  label {
+    padding: 14px 0 2px;
+    font-size: $font-size-xlarge;
+  }
+  button {
+    @extend .red-button;
+  }
+}
