search form elements modulized

--- a/components/detailed-search/detailed-search.scss
+++ b/components/detailed-search/detailed-search.scss
@@ -30,6 +30,9 @@
         margin-left: 0;
       }
     }
+    .clearfix {
+      width: 100%;
+    }
     button {
       width: 170px;
       margin: 13px 0 50px;
