--- a/components/nav-menu/nav-menu.scss
+++ b/components/nav-menu/nav-menu.scss
@@ -89,17 +89,20 @@
     border-top: 1px solid $color-navy;
     @include desktopSmall {
       width: auto !important;
-      left: 25%;
+      left: 22%;
       width: 80% !important;
       &-list {
         margin-top: 24px !important;
-        .search {
-          display: none !important;
-        }
         &-item {
           font-size: $font-size-xlarge;
           margin-left: 2%;
           display: inline !important;
+        }
+        .search {
+          padding-left: 23px;
+          background: url("/static/images/icons/search-red.svg") no-repeat
+            center left !important;
+          background-size: 20px !important;
         }
         .buy-car {
           padding-left: 28px;
