register form recaptche implemented

--- a/components/user-register-form/user-register-form.scss
+++ b/components/user-register-form/user-register-form.scss
@@ -9,5 +9,9 @@
       width: 120px;
       margin: 14px 0 50px;
     }
+    .customRecaptha {
+      transform: scale(0.9);
+      margin-top: 14px;
+    }
   }
 }
