--- a/components/animated-forms/animated-forms.scss
+++ b/components/animated-forms/animated-forms.scss
@@ -47,3 +47,33 @@
     }
   }
 }
+
+.preregister-form {
+  width: 200px;
+  margin: 0 auto;
+  @include desktopSmall {
+    margin-left: 10%;
+  }
+  button {
+    width: 150px;
+    margin-top: 13px;
+  }
+}
+
+.user-register-form {
+  form {
+    width: 230px;
+    margin: 0 auto;
+    @include desktopSmall {
+      margin-left: 10%;
+    }
+    button {
+      width: 120px;
+      margin: 14px 0 50px;
+    }
+    .customRecaptha {
+      transform: scale(0.9);
+      margin-top: 14px;
+    }
+  }
+}
